--- a/platforms/wp8/itforum.csproj
+++ b/platforms/wp8/itforum.csproj
@@ -317,6 +317,9 @@
         <Content Include="www/js/detailpages.js" />
     </ItemGroup>
     <ItemGroup>
+        <Content Include="www/js/detailpages.js~" />
+    </ItemGroup>
+    <ItemGroup>
         <Content Include="www/js/localDatabase.js" />
     </ItemGroup>
     <ItemGroup>
